src/test/deca/syntax/valid/testCast.deca
// test casting
{
int x;
float y = (float)(x);
}
