src/test/deca/syntax/invalid/testFloat.deca
// invalid float number
// overflow
{
    float f = 5.6E40;
}
